discussion/kv_engine/177002/177002_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Create misc test suite in serverless tests

Change-Id: Icf84a5dcae7c8b7ecc00ff05bbdd68e57c672071

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:22:56.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:30:40.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39760/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39760/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8219/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8219/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8318/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20432/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20432/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20780/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20780/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21420/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21420/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28813/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28813/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19654/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19654/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47308/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47308/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18548/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13: error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18548/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13:
error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18548/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17697/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
